# iaw

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README-IMPLEMENTATION.md  README.md  aether.toml  docker-compose.yml
.aida/: SPEC_SUMMARY.md  kanban.md
.aida/artifacts/: alignment.md
.aida/artifacts/designs/: structure.md
.aida/artifacts/requirements/: extraction.md
.aida/results/: spec-complete.json
.aida/specs/: aether-design.md  aether-requirements.md  aether-tasks.md
.aida/state/: session.json
.github/workflows/: ci.yml  release.yml
docs/: 企画書.md  要件定義書.md
src/: error.rs  lib.rs  main.rs  repo.rs
src/backend/: docker.rs  mod.rs  traits.rs
src/cli/: commands.rs  completion.rs  logs.rs  mod.rs  run.rs  status.rs  workspace.rs
src/config/: loader.rs  schema.rs
src/jj/: delegation.rs  mod.rs  parser.rs
src/output/: human.rs  json.rs  mod.rs
src/provisioner/: context_injector.rs  mod.rs  port_allocator.rs  state.rs
tests/: integration_tests.rs
