[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ajj"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bollard = "0.16"
futures-util = "0.3"
fs2 = "0.4"
handlebars = "5.0"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
